2006-06-21  Phil Muldoon  <pmuldoon@redhat.com>

	* glade/procpop.glade: Added warning icon and text to EditObserverDialog.

2006-06-20  Mike Cvet  <mcvet@redhat.com>

	* glade/registerwindow.gladep: Added some accessibility information for
	items in the register window.

2006-06-20  Adam Jocksch  <ajocksch@redhat.com>

	* register/RegisterWindow.java (setTask): No longer uses dummy data.

2006-06-20  Mike Cvet  <mcvet@redhat.com>

	* Gui.java (menuItemEvent): Removed the session manager option from the
	taskbar, via #2808 as there is no clean way to back out of the currently
	running session.

2006-06-19  Phil Muldoon  <pmuldoon@redhat.com>


	* druid/CreateFryskSessionDruid.java (getProcessSelectionControls.entryEvent): 
	Added listener for same session name being added.
	(getDruidStructureControls): get warning label and icon.
	
	* glade/frysk_create_session_druid.glade: Added warning label and icon.

2006-06-19  Phil Muldoon  <pmuldoon@redhat.com>

	* druid/CreateFryskSessionDruid.java (getProcessSelectionControls.buttonEvent): 
	Added iterator null	check test.

	(entryEvent): Added listener for same session name being added.
	
	* SessionManagerGui.java: Remove debugExecutable glade based variables. 
	(getDebugExecutableControls): Removed.
	(setButtonStates): Alter states to reflect removed controls.
	(toggleControls): Set toggles-states to toggle debugSingleProcessAction.
	
	* glade/frysk_session_manager.glade: Removed Debug Executable radio button 
	and file chooser.
	

2006-06-16  Phil Muldoon  <pmuldoon@redhat.com>

	* druid/CreateFryskSessionDruid.java (getProcessObserverControls):
	Added observerDescriptionTextView TextView.
	Added observerDescBuffer TextBuffer.
	* glade/frysk_create_session_druid.glade: Added description textview
	for observers.

	* glade/procpop.glade: Added Observer Description
	to editObserverDialog.

	* Gui.java: Added Session Manager to taskbar
	control center.
	* SessionManagerGui.java: Set the Frysk icon